@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkUnixSend.c,v 1.8 2002/06/19 19:37:55 mdejong Exp $
+ * RCS: @(#) $Id: tkUnixSend.c,v 1.9 2002/07/18 16:02:48 rmax Exp $
  */
 
 #include "tkPort.h"
@@ -1104,7 +1104,7 @@ Tk_SendCmd(clientData, interp, argc, argv)
 
     prevRestrictProc = Tk_RestrictEvents(SendRestrictProc,
 	    (ClientData) NULL, &prevArg);
-    TclpGetTime(&timeout);
+    Tcl_GetTime(&timeout);
     timeout.sec += 2;
     while (!pending.gotResponse) {
 	if (!TkUnixDoOneXEvent(&timeout)) {
@@ -1128,7 +1128,7 @@ Tk_SendCmd(clientData, interp, argc, argv)
 		strcpy(pending.result, msg);
 		pending.gotResponse = 1;
 	    } else {
-		TclpGetTime(&timeout);
+		Tcl_GetTime(&timeout);
 		timeout.sec += 2;
 	    }
 	}
